[package]
name = "ndiff"
version = "0.1.0"
authors = ["Shotaro Yamada <sinkuu@sinkuu.xyz>"]
edition = "2018"
license = "MIT/Apache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
termion = "1.5"
regex = "1.3.6"
clap = "2.33.0"
circular-queue = "0.2.4"
